# webwiki

./: .cursorrules  .gitignore  AGENTS.md  Dockerfile  LICENSE  PROPOSED_CHANGES.md  README.md  docker-compose.yml  patch_bottom_bar_3.py  patch_common.py  test_search  test_search.rs  test_search2  test_search2.rs
.Jules/: palette.md
.claude/: settings.json
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: auth.rs  git.rs  lib.rs  main.rs
backend/src/auth/: handlers.rs  middleware.rs
backend/src/search/: mod.rs  mod.rs.patch
backend/src/tests/: test_assets.rs
backend/static/: editor_interop.js  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
backend/tests/: integration_tests.rs  test_assets.rs
common/: Cargo.toml
common/src/: auth.rs  lib.rs
docs/architecture/: 001_system_overview.md  README.md
docs/features/: 001_initial_scope.md  README.md  command_palette.md
docs/interop/: tool_definitions.json
docs/security/: PERMISSIONS.md  README.md
docs/tasks/: 001_best_practice.md  001_remove_unwraps.md  002_frontend_unwrap_removal.md  003_main_error_handling.md  005_frontend_lib_unwrap_removal.md  FEATURES-20251227-135926-BQW.md
frontend/: Cargo.toml  index.html
frontend/src/: api.rs  commit_modal.rs  hooks.rs  lib.rs  login.rs  parsers.rs  search_bar.rs
frontend/src/components/: bottom_bar.rs  command_palette.rs  drawer.rs  history_modal.rs  icons.rs  login.rs  mod.rs  settings_modal.rs
frontend/static/: editor_interop.js  style.css  style.css.patch  sw.js
frontend/tests/: web_test.rs
scripts/: bootstrap.py  dev.sh  docker-dev.sh  index  index.py  install_hooks.sh  llm.py  memory.py  package.json  pre-commit.sh  tasks  tasks.py  test_e2e_full.js  test_keybindings.js  test_mobile_view.js  test_save_screenshot.js  upgrade.py
scripts/hooks/: session_start.py
scripts/lib/: audit.py  concurrency.py  config.py  io.py  yaml.py
static/: editor_interop.js  index.html  manifest.json  package.json  style.css  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
templates/: GUIDE.md  maintenance_mode.md  task.md
tests/: test_io.py  test_yaml.py
wiki_data/: index.md
(+43 files in other folders)
