[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[dependencies]
axum = { version = "0.8", features = ["form", "http1", "json", "matched-path", "original-uri", "query", "tokio", "tower-log", "tracing"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.0"
mime_guess = "2.0"
git2 = "0.19"
common = { path = "../common" }
