[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
serde_json = "1.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10.3"
base64 = "0.22.1"
pbkdf2 = "0.12.2"
hmac = "0.12.1"
sha2 = "0.10.8"
rand = "0.8.5"
thiserror = "2.0.11"
subtle = "2.5.0"
