[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies]
yew = { version = "0.22", features = ["csr"] }
yew-router = "0.19"
wasm-bindgen = "0.2"
gloo-net = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pulldown-cmark = "0.13"
common = { path = "../common" }
wasm-bindgen-futures = "0.4"
gloo-utils = "0.2"
gloo-dialogs = "0.2.0"
web-sys = { version = "0.3.83", features = ["HtmlInputElement", "HtmlTextAreaElement"] }
js-sys = "0.3.83"
gloo-storage = "0.3.0"
gloo-timers = "0.3.0"
